Tue Jun 09 20:25:08 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/queries.py: Add default_op to QueryText.

Tue Jun 09 18:51:13 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/application.py: Allow empty strings for the
	  highlighting parameters.

Mon Jun  1 12:57:14 BST 2009  Tom Mortimer <tom@lemurconsulting.com>

	* docs/future.rst,docs/api.rst,
	  flax/searchserver/backends/xappy_backend.py,
	  flax/searchserver/application.py: Added summarisation to search
	  interfaces, and documented (minimally!)

Fri May 29 15:47:56 BST 2009  Tom Mortimer <tom@lemurconsulting.com>

	* docs/api.rst,docs/future.rst: Moved/changed description of
	  proposed doc summary API.

Thu May 21 16:20:38 BST 2009  Tom Mortimer <tom@lemurconsulting.com>

	* docs/future.rst,docs/api.rst: Split off documentation of
	  currently unimplemented features into a separate file, and tidied
	  up the API doc.

Thu May 21 12:38:01 GMT 2009  Tom Mortimer <tom@lemurconsulting.com>

	* flax/searchserver/backends/xappy_backend.py,
	  flax/searchserver/backends/base_backend.py,
	  flax/searchserver/application.py: Added support for deleting docs.

Mon May 18 21:29:22 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/queries.py,flax/searchserver/unittests/: Add
	  an abstract query structure for parsing query parameters into to
	  be passed to backends, and the start of a unittest framework.

Thu May 14 22:08:19 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/backends/xappy_backend.py: For 2.4, where the
	  join and task_done methods are missing, add them as nops.

Tue May 12 07:57:57 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/backends/__init__.py,
	  flax/searchserver/backends/base_backend.py,
	  flax/searchserver/backends/xappy_backend.py: Some tidyups, and
	  add search_similar().  Also add search_template(), which is